# vllmstat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-14-fleet.md  2026-06-14-vllmstat.md  2026-06-15-tee-phase1.md
docs/superpowers/specs/: 2026-06-14-fleet-design.md  2026-06-14-vllmstat-design.md  2026-06-14-vllmtop-design.md  2026-06-15-tee-design.md
scripts/: smoke_live.py
src/vllmstat/: __init__.py  app.py  cli.py  config.py  format.py  model_dims.py  plot.py  render.py  snapshot_json.py  widgets.py
src/vllmstat/core/: fleet.py  histogram.py  history.py  metrics.py  parse.py  rates.py  resolve.py  state.py  tee.py
src/vllmstat/providers/: discover_docker.py  gpu.py  gpu_fdinfo.py  gpu_intel.py  gpu_sysfs.py  logsource.py  mock.py  proxy.py
src/vllmtop/: app.py  cli.py  config.py  render.py  snapshot_json.py
src/vllmtop/core/: kv.py  metrics.py  state.py
src/vllmtop/providers/: gpu.py  mock.py  vllm.py
tests/: test_app.py  test_cli_once.py  test_config.py  test_discover_docker.py  test_fleet.py  test_format.py  test_gpu_fdinfo.py  test_gpu_intel.py  test_gpu_sysfs.py  test_histogram.py  test_history.py  test_kv.py  test_logsource.py  test_metrics.py  test_mock_gpu.py  test_model_dims.py  test_parse.py  test_plot.py  test_provider_gpu.py  test_provider_mock.py  test_provider_vllm.py  test_rates.py  test_render.py  test_resilience.py  test_resolve.py  test_smoke.py  test_state.py  test_tee.py
