[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllmstat"
version = "0.2.1"
description = "nvtop for vLLM — an interactive terminal dashboard for vLLM serving performance"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Bryan Vine", email = "bryan@bryanvine.com" }]
keywords = ["vllm", "llm", "tui", "monitoring", "nvtop", "gpu"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "textual>=0.60",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "nvidia-ml-py>=12.535",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "pyright>=1.1"]

[project.scripts]
vllmstat = "vllmstat.cli:main"

[project.urls]
Homepage = "https://github.com/bryanvine/vllmstat"
Issues = "https://github.com/bryanvine/vllmstat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vllmstat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
